--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -97,6 +97,7 @@ nav li {
 
 li:hover {
 	color: #B1663C;
+	cursor: pointer;
 }
 #introduction {
 	display: flex;
@@ -215,4 +216,9 @@ footer nav ul {
 	display: flex;
 	justify-content: center;
 	gap: 15px;
+}
+
+a {
+	text-decoration: none;
+	color: black;
 }
