--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -52,6 +52,7 @@ body {
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	position: relative;
 }
 header {
 	display: flex;
@@ -232,6 +233,10 @@ a {
 	background-color: black;
 	margin: 0px;
 	height: 40px;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
 }
 #edition-box{
 	display: none;
@@ -241,3 +246,57 @@ a {
 	font-weight: 400;
 	font-size: 16px;
 }
+
+.modal-overlay{
+	display: flex;
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	margin: 0px;
+	top: 0px;
+	left: 0px;
+	background-color: rgba(0, 0, 0, 0.6);
+	justify-content: center;
+	align-items: center;
+	
+}
+
+.modal{
+	height: auto;
+	width: 60%;
+	background-color: white;
+	padding: 50px;
+	text-align: center;
+}
+
+.close{
+	display: flex;
+	justify-content: flex-end;
+	width: 100%;
+	
+}
+
+.delete{
+	position: absolute;
+	top: 10px;
+	right: 5px;
+	background-color: black;
+	color: white;
+	padding: 5px;
+}
+
+.modal-galerie{
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+}
+.modal-work{
+	position: relative;
+	width: 18%;
+}
+.work-img{
+	width: 100%;
+}
+
+
+
