--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -267,11 +267,21 @@ a {
 }
 
 .modal{
+	flex-direction: column;
+	gap: 10px;
+	align-items: center;
 	height: auto;
-	width: 60%;
+	width: 35%;
 	background-color: white;
 	padding: 50px;
 	text-align: center;
+	border-radius: 10px;
+}
+
+.modal h2{
+	font-family: "Work Sans";
+	font-weight: 400;
+	font-size: 26px;
 }
 
 .close{
@@ -283,24 +293,30 @@ a {
 
 .delete{
 	position: absolute;
-	top: 10px;
+	top: 5px;
 	right: 5px;
 	background-color: black;
 	color: white;
 	padding: 5px;
+	font-size: 0.7em;
 }
 
 .modal-galerie{
 	display: flex;
+	padding-top: 50px;
 	flex-wrap: wrap;
-	gap: 20px;
+	width: 90%;
+	gap: 10px;
+	align-items: center;
 }
 .modal-work{
 	position: relative;
 	width: 18%;
+
 }
 .work-img{
 	width: 100%;
+	object-fit: scale-down;
 }
 
 
@@ -322,3 +338,146 @@ a {
 	cursor: pointer;
 }
 
+.fa-trash-can{
+	cursor: pointer;
+}
+
+.button-modal{
+	margin-top: 60px;
+	border-radius: 60px;
+	border: solid 1px;
+	font-size: 14px;
+	font-family: 'Syne';
+	font-weight: 700;
+	color: white;
+	background-color: #1D6154;
+	padding: 5px 20px 5px 20px;
+	cursor: pointer;
+	width: 240px;
+	height: 36px;
+}
+
+.modal-add{
+	display: none;
+	flex-direction: column;
+	gap: 10px;
+	align-items: center;
+	height: auto;
+	width: 35%;
+	background-color: white;
+	padding: 50px;
+	text-align: center;
+	border-radius: 10px;
+}
+
+.modal-add form {
+	width: 90%;
+}
+
+.modal-add-icon{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	justify-content: space-between;
+}
+
+.modal-add-file{
+	display: flex;
+	flex-direction: column;
+	background-color: #E8F1F6;
+	align-items: center;
+	gap: 20px;
+	padding: 30px 0 30px;
+	width: 100%;
+}
+
+.fa-image{
+	color: #B9C5CC;
+	font-size: 6em;
+}
+
+.modal-add-input{
+	display: none;
+}
+
+.modal-add-image{
+	display: none;
+	max-width: 40%;
+}
+
+.modal-add-label{
+	background-color: #CBD6DC;
+	border-radius: 50px;
+	font-family: "Work Sans";
+	font-weight: 500px;
+	font-size: 14px;
+	padding: 10px;
+	width: 50%;
+	cursor: pointer;
+}
+
+.modal-add-title-box{
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	gap: 10px;
+	padding-top: 20px;
+}
+
+.modal-add-title-box label{
+	display: flex;
+	font-family: "Work Sans";
+	font-weight: 500;
+	font-size: 14px;
+	color: #3D3D3D;
+	width: 100%;
+}
+
+.modal-add-title-box input{
+	width: 100%;
+	height: 50px;
+	background-color: white;
+	border: none;
+	filter: drop-shadow(0px 4px 14px rgba(0,0,0, 0.15));
+}
+
+
+.modal-add-category-box{
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	padding-top: 20px;
+	gap: 10px;
+}
+
+.modal-add-category-box label{
+	display: flex;
+	width: 100%;
+	font-family: "Work Sans";
+	font-weight: 500;
+	font-size: 14px;
+	color: #3D3D3D;
+}
+
+.modal-add-category-box select{
+	width: 100%;
+	height: 50px;
+	background-color: white;
+	border: none;
+	appearance: none;
+	filter: drop-shadow(0px 4px 14px rgba(0,0,0, 0.15));
+}
+
+.modal-add-button{
+	margin-top: 50px;
+	padding: 10px;
+	color: white;
+	background-color: #A7A7A7;
+	border-radius: 60px;
+	width: 50%;
+	font-family:"Syne";
+	font-weight: 700;
+	font-size: 14px;
+	border: none;
+
+}
