--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -396,23 +396,24 @@ a {
 	font-size: 6em;
 }
 
-.modal-add-input{
+.modal-add-file input{
 	display: none;
 }
 
-.modal-add-image{
+.modal-add-file img{
 	display: none;
-	max-width: 40%;
+	max-width: 100%;
+	max-height: 300px;
 }
 
-.modal-add-label{
+.modal-add-file label{
 	background-color: #CBD6DC;
 	border-radius: 50px;
 	font-family: "Work Sans";
 	font-weight: 500px;
 	font-size: 14px;
 	padding: 10px;
-	width: 50%;
+	width: 40%;
 	cursor: pointer;
 }
 
